--- a/module1.html
+++ b/module1.html
@@ -9,11 +9,11 @@
 </head>
 <body class="page-module fade-in">
   <header>
-    <div class="nav-container">
+    <nav class="nav-container" role="navigation" aria-label="Main Navigation">
       <div class="brand-area">
         <span class="brand-title">Ohad’s WeCode</span>
       </div>
-      <div class="menu-toggle" id="menuToggle">
+      <div class="menu-toggle" id="menuToggle" aria-label="Toggle Navigation">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
@@ -28,7 +28,7 @@
         <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
-    </div>
+    </nav>
   </header>
 
   <main class="page-content">
@@ -44,7 +44,6 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: RAII &amp; Constructors</h2>
       <p>Create a <code>FileWrapper</code> class that opens a file in its constructor and closes it in the destructor, handling errors gracefully.</p>
-      <!-- Link to IDE now (all programming tasks link to our IDE) -->
       <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: Smart Pointers &amp; Move Semantics</h2>
@@ -61,7 +60,7 @@
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
 
-  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline(){
