--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,13 @@
 </head>
 <body class="page-portfolio fade-in">
   <header>
-    <div class="nav-container">
+    <nav class="nav-container" role="navigation" aria-label="Main Navigation">
       <div class="brand-area">Ohad’s WeCode</div>
+      <div class="menu-toggle" id="menuToggle" aria-label="Toggle Navigation">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <ul class="nav-menu">
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="exercises.html" class="nav-link">Exercises</a></li>
@@ -19,7 +24,7 @@
         <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
-    </div>
+    </nav>
   </header>
 
   <main class="page-content">
@@ -29,23 +34,21 @@
       This platform is my advanced learning and portfolio demonstration—bridging
       real-time embedded topics with modern C++ for a professional, interview-focused skill set.
     </p>
-
-    <!-- 3 highlight cards -->
     <div class="cards-row fade-in">
       <div class="card" style="width:280px;">
         <h2>Background</h2>
         <div class="ticket-text">
           <p>B.Sc. in Computer Science / Electronics Eng.</p>
           <p>10+ years in embedded dev</p>
-          <p>Expert in real-time systems & OS internals</p>
+          <p>Expert in real-time systems &amp; OS internals</p>
         </div>
       </div>
       <div class="card" style="width:280px;">
         <h2>Focus Areas</h2>
         <div class="ticket-text">
           <p>Low-level C/C++ programming</p>
-          <p>Multithreading & concurrency</p>
-          <p>Performance & memory optimization</p>
+          <p>Multithreading &amp; concurrency</p>
+          <p>Performance &amp; memory optimization</p>
         </div>
       </div>
       <div class="card" style="width:280px;">
@@ -53,16 +56,14 @@
         <div class="ticket-text">
           <p>Advanced modules for challenging C++ interviews</p>
           <p>In-browser IDE with real-time checks</p>
-          <p>Showcase a professional portfolio & background</p>
+          <p>Showcase a professional portfolio &amp; background</p>
         </div>
       </div>
     </div>
-
     <div class="resume-btn fade-in">
       <p style="margin-bottom:10px;">Check out my detailed CV/Resume:</p>
       <a href="resume.html" class="btn">View Resume</a>
     </div>
-
     <div style="text-align:center; margin-top:30px;">
       <p style="margin-bottom:10px;">Connect with me on GitHub &amp; LinkedIn:</p>
       <a href="https://github.com/ohadonmicrosoft" target="_blank" class="icon-btn" title="GitHub">
@@ -78,7 +79,7 @@
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
 
-  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
 </body>
 </html>
