--- a/resources.html
+++ b/resources.html
@@ -8,8 +8,13 @@
 </head>
 <body class="page-resources fade-in">
   <header>
-    <div class="nav-container">
+    <nav class="nav-container" role="navigation" aria-label="Main Navigation">
       <div class="brand-area">Ohad’s WeCode</div>
+      <div class="menu-toggle" id="menuToggle" aria-label="Toggle Navigation">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
       <ul class="nav-menu">
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="exercises.html" class="nav-link">Exercises</a></li>
@@ -19,7 +24,7 @@
         <!-- Removed Diagrams and Interview Simulator -->
         <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
       </ul>
-    </div>
+    </nav>
   </header>
 
   <main class="page-content">
@@ -27,7 +32,6 @@
     <p class="subtitle">
       Explore references, tutorials, external links for deeper C++ mastery.
     </p>
-
     <div class="resources-grid fade-in">
       <div class="resource-card card">
         <h2>cppreference.com</h2>
@@ -65,8 +69,7 @@
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
-
-  <button id="scrollToTopBtn" class="scroll-to-top-btn">▲</button>
+  <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
 </body>
 </html>
