refactor: clean up whitespace and improve code formatting across multiple HTML and JavaScript files

--- a/exercises.html
+++ b/exercises.html
@@ -26,13 +26,12 @@
       </ul>
     </nav>
   </header>
-
+  
   <main class="page-content">
     <h1>Advanced C++ Interview Syllabus</h1>
     <p class="subtitle">
       Explore interactive modules presented as cards! Click a module to open it.
     </p>
-    <!-- Modules Grid Layout -->
     <div class="modules-grid">
       <div class="course-module card">
         <h2>Module 1</h2>
@@ -46,7 +45,7 @@
       </div>
       <div class="course-module card">
         <h2>Module 3</h2>
-        <p>Real-Time &amp; Embedded</p>
+        <p>Real‑Time &amp; Embedded</p>
         <a href="module3.html" class="btn">Open</a>
       </div>
       <div class="course-module card">
@@ -71,7 +70,7 @@
       </div>
     </div>
   </main>
-
+  
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
