--- a/index.html
+++ b/index.html
@@ -36,18 +36,17 @@
       <h1 class="hero-title">Welcome to WeCode</h1>
       <p class="hero-subtitle">
         Elevate Your C++ Skills with advanced modules, real-time progress,
-        integrated quizzes, interactive diagrams, and a top-tier UI experience.
+        integrated quizzes, interactive diagrams, and a top‑tier UI experience.
       </p>
       <a href="exercises.html" class="btn">Get Started</a>
     </section>
-
     <section class="features fade-in">
       <div class="feature-card card">
         <h2>Robust Syllabus</h2>
         <p>Master concurrency, embedded, memory, and more—targeted for real interviews.</p>
       </div>
       <div class="feature-card card">
-        <h2>Hands-On IDE</h2>
+        <h2>Hands‑On IDE</h2>
         <p>Practice code in your browser. No setup overhead—just pure learning.</p>
       </div>
       <div class="feature-card card">
@@ -55,7 +54,6 @@
         <p>Track achievements, run timed quizzes, and see your local leaderboard!</p>
       </div>
     </section>
-
     <section class="cta card fade-in">
       <h2>Prepare for Your Next Interview</h2>
       <p class="cta-desc">
@@ -68,7 +66,6 @@
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
-
   <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
 </body>
