--- a/module4.html
+++ b/module4.html
@@ -30,11 +30,11 @@
       </ul>
     </nav>
   </header>
-
+  
   <main class="page-content">
     <section class="card fade-in">
       <h1>Module 4: Concurrency &amp; Multithreading</h1>
-      <p>Delve into threads, mutexes, lock-free data structures, and concurrency patterns in modern C++.</p>
+      <p>Delve into threads, mutexes, lock‑free data structures, and concurrency patterns in modern C++.</p>
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline" style="margin-top:15px;">
         <div class="timeline-step">Step 1: Thread Basics</div>
@@ -50,17 +50,16 @@
       <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
     </section>
   </main>
-
+  
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
-
   <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline(){
       const timeline = document.getElementById("moduleTimeline");
-      if(timeline) timeline.classList.toggle("show");
+      if (timeline) timeline.classList.toggle("show");
     }
   </script>
 </body>
