--- a/portfolio.html
+++ b/portfolio.html
@@ -26,13 +26,13 @@
       </ul>
     </nav>
   </header>
-
+  
   <main class="page-content">
     <h1>Meet the Developer</h1>
     <p>
       Hello, I’m <strong>Ohad</strong>, an RT Embedded Engineer specializing in C/C++ on Linux.
       This platform is my advanced learning and portfolio demonstration—bridging
-      real-time embedded topics with modern C++ for a professional, interview-focused skill set.
+      real‑time embedded topics with modern C++ for a professional, interview‑focused skill set.
     </p>
     <div class="cards-row fade-in">
       <div class="card" style="width:280px;">
@@ -40,13 +40,13 @@
         <div class="ticket-text">
           <p>B.Sc. in Computer Science / Electronics Eng.</p>
           <p>10+ years in embedded dev</p>
-          <p>Expert in real-time systems &amp; OS internals</p>
+          <p>Expert in real‑time systems &amp; OS internals</p>
         </div>
       </div>
       <div class="card" style="width:280px;">
         <h2>Focus Areas</h2>
         <div class="ticket-text">
-          <p>Low-level C/C++ programming</p>
+          <p>Low‑level C/C++ programming</p>
           <p>Multithreading &amp; concurrency</p>
           <p>Performance &amp; memory optimization</p>
         </div>
@@ -55,7 +55,7 @@
         <h2>Project Goals</h2>
         <div class="ticket-text">
           <p>Advanced modules for challenging C++ interviews</p>
-          <p>In-browser IDE with real-time checks</p>
+          <p>In‑browser IDE with real‑time checks</p>
           <p>Showcase a professional portfolio &amp; background</p>
         </div>
       </div>
@@ -74,11 +74,10 @@
       </a>
     </div>
   </main>
-
+  
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
-
   <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
 </body>
