--- a/resume.html
+++ b/resume.html
@@ -26,13 +26,13 @@
       </ul>
     </nav>
   </header>
-
+  
   <main class="page-content">
     <h1>Resume - Ohad Alon</h1>
     <p class="subtitle">
-      An overview of my expertise in embedded systems, real-time programming, 
-      and modern C++ development.
+      An overview of my expertise in embedded systems, real‑time programming, and modern C++ development.
     </p>
+    <!-- Contact Info Card -->
     <section class="card fade-in" style="max-width:600px; margin:20px auto;">
       <h2>Contact Info</h2>
       <div class="ticket-text">
@@ -41,17 +41,18 @@
         <p><strong>Email:</strong> <a href="mailto:alonohad100@gmail.com">alonohad100@gmail.com</a></p>
       </div>
     </section>
+    <!-- Profile Card -->
     <section class="card fade-in" style="max-width:800px; margin:20px auto;">
       <h2>Profile</h2>
       <div class="ticket-text">
         <p>
-          Accomplished Senior Embedded Software Developer with extensive experience
-          designing real-time systems, optimizing embedded software architectures,
-          and delivering reliable solutions for complex projects. Expertise in
-          cybersecurity protocols, AI integration, and team mentoring.
+          Accomplished Senior Embedded Software Developer with extensive experience designing real‑time systems,
+          optimizing embedded software architectures, and delivering reliable solutions for complex projects.
+          Expertise in cybersecurity protocols, AI integration, and team mentoring.
         </p>
       </div>
     </section>
+    <!-- Work Experience -->
     <section class="card fade-in" style="max-width:900px; margin:20px auto;">
       <h2>Work Experience</h2>
       <div class="ticket-text">
@@ -67,7 +68,7 @@
           <h3>Software Developer - Brodmann17 (01/2021 – 02/2022)</h3>
           <ul>
             <li>Led AI solutions for automotive object detection.</li>
-            <li>Optimized algorithms for real-time performance.</li>
+            <li>Optimized algorithms for real‑time performance.</li>
             <li>Integrated AI capabilities into client platforms.</li>
           </ul>
         </article>
@@ -83,21 +84,23 @@
           <h3>Software Developer - Experis Israel (04/2016 – 10/2016)</h3>
           <ul>
             <li>Developed embedded software under strict deadlines.</li>
-            <li>Specialized in low-level C programming, real-time debugging tools.</li>
+            <li>Specialized in low‑level C programming, real‑time debugging tools.</li>
           </ul>
         </article>
       </div>
     </section>
+    <!-- Education -->
     <section class="card fade-in" style="max-width:900px; margin:20px auto;">
       <h2>Education</h2>
       <div class="ticket-text">
         <h3>B.Sc. in Electrical/Electronics Eng. - Ruppin (2010–2014)</h3>
         <ul>
           <li>Designed embedded system focusing on energy efficiency.</li>
-          <li>Excelled in embedded design, signal processing, low-level SW engineering.</li>
+          <li>Excelled in embedded design, signal processing, low‑level SW engineering.</li>
         </ul>
       </div>
     </section>
+    <!-- Key Projects & Skills -->
     <section class="card fade-in" style="max-width:900px; margin:20px auto;">
       <h2>Key Projects</h2>
       <div class="ticket-text">
@@ -109,10 +112,10 @@
           </ul>
         </article>
         <article>
-          <h3>AI-Based Automotive Object Detection</h3>
+          <h3>AI‑Based Automotive Object Detection</h3>
           <ul>
-            <li>Integrated AI-driven detection solutions into client systems.</li>
-            <li>Improved detection accuracy in real-world scenarios.</li>
+            <li>Integrated AI‑driven detection solutions into client systems.</li>
+            <li>Improved detection accuracy in real‑world scenarios.</li>
           </ul>
         </article>
       </div>
@@ -121,16 +124,17 @@
       <h2>Skills</h2>
       <div class="ticket-text">
         <ul>
-          <li><strong>Embedded Systems:</strong> Real-Time OS, HW-SW Integration</li>
+          <li><strong>Embedded Systems:</strong> Real‑Time OS, HW‑SW Integration</li>
           <li><strong>Languages:</strong> C, C++</li>
           <li><strong>Cybersecurity:</strong> Cryptographic Protocols</li>
           <li><strong>AI Development:</strong> TensorFlow, Object Detection</li>
-          <li><strong>Debug Tools:</strong> GDB, Real-Time Debugging</li>
-          <li><strong>Soft Skills:</strong> Problem-Solving, Collaboration</li>
+          <li><strong>Debug Tools:</strong> GDB, Real‑Time Debugging</li>
+          <li><strong>Soft Skills:</strong> Problem‑Solving, Collaboration</li>
         </ul>
       </div>
     </section>
   </main>
+  
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
