--- a/module2.html
+++ b/module2.html
@@ -27,13 +27,13 @@
       </ul>
     </nav>
   </header>
-
+  
   <main class="page-content">
     <section class="card fade-in">
       <h1>Module 2: Data Structures &amp; Algorithms</h1>
       <p>
         Explore arrays, linked lists, sorting, searching, BFS/DFS, etc.
-        Each lesson features tasks & code practice.
+        Each lesson features tasks &amp; code practice.
       </p>
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline" style="margin-top:15px;">
@@ -55,17 +55,16 @@
       <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 3</button>
     </section>
   </main>
-
+  
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
-
   <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline(){
       const timeline = document.getElementById("moduleTimeline");
-      if(timeline) timeline.classList.toggle("show");
+      if (timeline) timeline.classList.toggle("show");
     }
   </script>
 </body>
