--- a/module3.html
+++ b/module3.html
@@ -30,10 +30,10 @@
       </ul>
     </nav>
   </header>
-
+  
   <main class="page-content">
     <section class="card fade-in">
-      <h1>Module 3: Real-Time &amp; Embedded Systems</h1>
+      <h1>Module 3: Real‑Time &amp; Embedded Systems</h1>
       <p>Focus on RTOS fundamentals, concurrency in embedded, interrupts, and hardware debugging.</p>
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline" style="margin-top:15px;">
@@ -42,7 +42,7 @@
       </div>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: RTOS Basics</h2>
-      <p>Understand how tasks are scheduled in real-time operating systems, managing priorities deterministically.</p>
+      <p>Understand how tasks are scheduled in real‑time operating systems, managing priorities deterministically.</p>
       <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: Interrupts &amp; Embedded Concurrency</h2>
@@ -50,17 +50,16 @@
       <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
     </section>
   </main>
-
+  
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
-
   <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline(){
       const timeline = document.getElementById("moduleTimeline");
-      if(timeline) timeline.classList.toggle("show");
+      if (timeline) timeline.classList.toggle("show");
     }
   </script>
 </body>
