--- a/module7.html
+++ b/module7.html
@@ -30,15 +30,15 @@
       </ul>
     </nav>
   </header>
-
+  
   <main class="page-content">
     <section class="card fade-in">
       <h1 class="fancy-title">Module 7: System Design &amp; Advanced Topics</h1>
-      <p>Design patterns, high-level architecture, and advanced scenarios relevant to C++ interviews.</p>
+      <p>Design patterns, high‑level architecture, and advanced scenarios relevant to C++ interviews.</p>
       <button class="btn" onclick="toggleTimeline()">Toggle Lesson Timeline</button>
       <div class="module-timeline" id="moduleTimeline" style="margin-top:15px;">
         <div class="timeline-step">Step 1: Common Design Patterns</div>
-        <div class="timeline-step">Step 2: High-Level Architecture &amp; Interview Scenarios</div>
+        <div class="timeline-step">Step 2: High‑Level Architecture &amp; Interview Scenarios</div>
       </div>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: Design Patterns</h2>
@@ -46,21 +46,20 @@
       <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: System Architecture &amp; Interview Scenarios</h2>
-      <p>Discuss scalable designs, trade-offs, and typical high-level architecture questions in interviews.</p>
+      <p>Discuss scalable designs, trade‑offs, and typical high‑level architecture questions in interviews.</p>
       <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
     </section>
   </main>
-
+  
   <footer>
     © 2025 Ohad’s WeCode. All rights reserved.
   </footer>
-
   <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
   <script src="scripts/main.js"></script>
   <script>
     function toggleTimeline(){
       const timeline = document.getElementById("moduleTimeline");
-      if(timeline) timeline.classList.toggle("show");
+      if (timeline) timeline.classList.toggle("show");
     }
   </script>
 </body>
