--- a/quiz.html
+++ b/quiz.html
@@ -22,34 +22,4 @@
         <li><a href="resources.html" class="nav-link">Resources</a></li>
         <li><a href="portfolio.html" class="nav-link">Portfolio</a></li>
         <!-- Removed Diagrams and Interview Simulator -->
-        <li><a href="embedded-ide.html" class="nav-link">IDE</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="page-content">
-    <section class="card" style="max-width:800px; margin:0 auto;">
-      <h1>Interview Quiz</h1>
-      <p id="quiz-intro">
-        Test your C++ knowledge with a lesson-based quiz, featuring a timer and local leaderboard!
-      </p>
-      <div class="quiz-timer" id="quiz-timer">Time: 00:00</div>
-      <div id="quiz-container" class="quiz-container"></div>
-      <button id="start-quiz" class="btn">Start Quiz</button>
-      <button id="submit-quiz" class="btn" style="display:none; margin-left:10px;">Submit Quiz</button>
-      <div id="quiz-result" style="margin-top:20px; font-weight:600;"></div>
-      <div class="leaderboard" id="leaderboard" style="display:none; margin-top:20px;">
-        <h3>Local Leaderboard</h3>
-        <div id="leaderboard-entries"></div>
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    © 2025 Ohad’s WeCode. All rights reserved.
-  </footer>
-  <button id="scrollToTopBtn" class="scroll-to-top-btn" aria-label="Scroll to top">▲</button>
-  <script src="scripts/main.js"></script>
-  <script src="scripts/quiz.js"></script>
-</body>
-</html>
+        <li><a href="embedded-ide.html" class="nav-link">IDE
