--- a/module5.html
+++ b/module5.html
@@ -18,6 +18,7 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
+      <!-- FIX APPLIED: Added id="navMenu" -->
       <ul class="nav-menu" id="navMenu">
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="exercises.html" class="nav-link">Exercises</a></li>
