--- a/exercises.html
+++ b/exercises.html
@@ -15,7 +15,8 @@
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
-      <ul class="nav-menu">
+      <!-- FIX APPLIED: Added id="navMenu" -->
+      <ul class="nav-menu" id="navMenu">
         <li><a href="index.html" class="nav-link">Home</a></li>
         <li><a href="progress.html" class="nav-link">Progress</a></li>
         <li><a href="resources.html" class="nav-link">Resources</a></li>
