--- a/module1.html
+++ b/module1.html
@@ -44,15 +44,15 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: RAII &amp; Constructors</h2>
       <p>Create a <code>FileWrapper</code> class that opens a file in its constructor and closes it in the destructor, handling errors gracefully.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M1&lesson=L1'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: Smart Pointers &amp; Move Semantics</h2>
       <p>Use <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, and move semantics to manage resources effectively, avoiding leaks.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M1&lesson=L2'">Open IDE for Lesson 2</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 3: Lambdas &amp; STL Algorithms</h2>
       <p>Leverage lambdas for concise code with STL (e.g., <code>std::remove_if</code>) and explore different capture modes.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 3</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M1&lesson=L3'">Open IDE for Lesson 3</button>
     </section>
   </main>
   
