--- a/module3.html
+++ b/module3.html
@@ -43,11 +43,11 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: RTOS Basics</h2>
       <p>Understand how tasks are scheduled in real‑time operating systems, managing priorities deterministically.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M3&lesson=L1'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: Interrupts &amp; Embedded Concurrency</h2>
       <p>Design basic interrupt handlers, handle concurrency on microcontrollers, and avoid pitfalls.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M3&lesson=L2'">Open IDE for Lesson 2</button>
     </section>
   </main>
   
