--- a/module4.html
+++ b/module4.html
@@ -43,11 +43,11 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: Thread Basics</h2>
       <p>Learn how to create and manage threads, consider thread lifecycle, and handle basic parallel tasks in C++.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M4&lesson=L1'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: Mutexes &amp; Synchronization</h2>
       <p>Use mutexes and locks to protect shared resources from race conditions, discuss deadlock prevention and design patterns.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M4&lesson=L2'">Open IDE for Lesson 2</button>
     </section>
   </main>
   
