--- a/module5.html
+++ b/module5.html
@@ -10,9 +10,7 @@
 <body class="page-module fade-in">
   <header>
     <nav class="nav-container" role="navigation" aria-label="Main Navigation">
-      <div class="brand-area">
-        <span class="brand-title">Ohad’s WeCode</span>
-      </div>
+      <div class="brand-area">Ohad’s WeCode</div>
       <div class="menu-toggle" id="menuToggle" aria-label="Toggle Navigation">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -49,11 +47,11 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: Manual Memory Allocation</h2>
       <p>Use <code>new</code> and <code>delete</code> responsibly, avoid memory leaks and dangling pointers.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M5&lesson=L1'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: Smart Pointers &amp; Debugging Tools</h2>
       <p>Leverage <code>std::unique_ptr</code>, <code>std::shared_ptr</code>, Valgrind, and GDB for robust code.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M5&lesson=L2'">Open IDE for Lesson 2</button>
     </section>
   </main>
   
