--- a/module6.html
+++ b/module6.html
@@ -43,11 +43,11 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: Template Fundamentals</h2>
       <p>Function/class templates, instantiation rules, partial specialization. Master the basics of generics in C++.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M6&lesson=L1'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: SFINAE &amp; Type Traits</h2>
       <p>Use “Substitution Failure Is Not An Error” and <code>std::enable_if</code> to create compile-time branches, explore type traits.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M6&lesson=L2'">Open IDE for Lesson 2</button>
     </section>
   </main>
 
