--- a/module7.html
+++ b/module7.html
@@ -43,11 +43,11 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: Design Patterns</h2>
       <p>Singleton, Factory, Observer, and more. Explore modern C++ implementations for each pattern.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M7&lesson=L1'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: System Architecture &amp; Interview Scenarios</h2>
       <p>Discuss scalable designs, trade‑offs, and typical high‑level architecture questions in interviews.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M7&lesson=L2'">Open IDE for Lesson 2</button>
     </section>
   </main>
   
