--- a/module2.html
+++ b/module2.html
@@ -45,15 +45,15 @@
       <hr style="margin:20px 0;"/>
       <h2>Lesson 1: Arrays &amp; Linked Lists</h2>
       <p>Implement basic operations (insert, delete, traverse) and analyze time complexities.</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 1</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M2&lesson=L1'">Open IDE for Lesson 1</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 2: Trees &amp; Graphs</h2>
       <p>Explore tree traversals and BFS/DFS on graphs. Watch out for complexities!</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 2</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M2&lesson=L2'">Open IDE for Lesson 2</button>
       <hr style="margin:20px 0;"/>
       <h2>Lesson 3: Sorting &amp; Searching</h2>
       <p>Dive deeper into mergesort, quicksort, and searching approaches (binary, BFS, etc.).</p>
-      <button class="btn" onclick="window.location.href='embedded-ide.html'">Open IDE for Lesson 3</button>
+      <button class="btn" onclick="window.location.href='embedded-ide.html?module=M2&lesson=L3'">Open IDE for Lesson 3</button>
     </section>
   </main>
   
